Configured validateHTML module

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/mjsirois/final-project--intro-to-internet-programming--cs-275--fall-2022/issues"
   },
-  "homepage": "https://github.com/mjsirois/final-project--intro-to-internet-programming--cs-275--fall-2022#readme"
+  "homepage": "https://github.com/mjsirois/final-project--intro-to-internet-programming--cs-275--fall-2022#readme",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-html": "^5.0.0"
+  }
 }
