--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-html": "^5.0.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-stylelint": "^13.0.0"
   }
 }
