Configured jsCompressor modules

--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "homepage": "https://github.com/mjsirois/final-project--intro-to-internet-programming--cs-275--fall-2022#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-eslint": "^6.0.0",
     "gulp-html": "^5.0.0",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-stylelint": "^13.0.0"
+    "gulp-stylelint": "^13.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
