--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mjsirois/final-project--intro-to-internet-programming--cs-275--fall-2022#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
+    "browser-sync": "^2.27.10",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
